--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #342a28;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -35,4 +35,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+.sidemenu {
+  box-sizing: border-box;
+  padding: 100px;
+  display: flex;
+  justify-content: space-between;
+  width: auto;
+  height: auto;
 }
